--- a/desktop/src/main/resources/assets/bundles/strings_ru_RU.properties
+++ b/desktop/src/main/resources/assets/bundles/strings_ru_RU.properties
@@ -56,3 +56,4 @@ path_format_alert=\u043F\u0435\u0440\u0432\u044B\u043C \u0441\u0438\u043C\u0432\
 request_error=\u041E\u0448\u0438\u0431\u043A\u0430 \u0437\u0430\u043F\u0440\u043E\u0441\u0430: %s
 file_not_found=\u0424\u0430\u0439\u043B "%s" \u043D\u0435 \u043D\u0430\u0439\u0434\u0435\u043D
 invalid_node_id=\u041D\u0435\u0432\u0435\u0440\u043D\u044B\u0439 ID \u0444\u0430\u0439\u043B\u0430: '%s'
+files_count=\u0424\u0430\u0439\u043B\u043E\u0432: %d, \u043F\u0430\u043F\u043E\u043A: %d
